Feat: 구역별 테이블 상세정보 조회 api 구현 - orderNumber필드값을 TotalOrder -> UnitOrder로 변경 - 현재 이용중인 테이블 주문에 대한 단건 주문들(UnitOrder)의 상세정보를 OrderTableDetailResDTO에 담아서 보냄 - 각 주문상태별로 주문시간, 주문완료시간, 취소시간을 UnitOrder엔티티의 switch문법으로 변환하여 동적으로 넣어줌 Refs: #55